--- a/views/agendador/index.handlebars
+++ b/views/agendador/index.handlebars
@@ -7,7 +7,14 @@
       <img src="https://image.freepik.com/vetores-gratis/bandeira-de-tracado-de-pincel-do-brasil_1102-938.jpg" class="card-img-top">
       <div class="card-body">
         <h5 class="card-title">Programa voz do Brasil</h5>
-        <p class="card-text">O programa “A Voz do Brasil”, que está há mais de 80 anos no ar, poderá ser veiculado pelas emissoras de rádio no intervalo das 19 às 22 horas e não mais obrigatoriamente das 19 às 20 horas. A lei que flexibiliza o horário foi sancionada nesta quarta-feira (4) pelo presidente Michel Temer (Lei 13.644/18). Fonte: Agência Câmara de Notícias</p>
+        <p class="card-text">O programa “A Voz do Brasil”,
+           que está há mais de 80 anos no ar, poderá ser veiculado
+           pelas emissoras de rádio no intervalo das 19 às 22 horas
+           e não mais obrigatoriamente das 19 às 20 horas. A lei que
+           flexibiliza o horário foi sancionada nesta quarta-feira (4)
+           pelo presidente Michel Temer (Lei 13.644/18). Fonte: Agência
+           Câmara de Notícias</p>
+           
       </div>
       <div class="card-footer">
         <small class="text-muted">Voz do Brasil</small>
@@ -17,7 +24,14 @@
       <img src="/img/radio.png"  class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Radio no Brasil</h5>
-        <p class="card-text">O rádio nasceu no Brasil, oficialmente, em 7 de setembro de 1922, nas comemorações do centenário da Independência do país, com a transmissão, à distancia e sem fios, da fala  do presidente Epitácio Pessoa na inauguração da radiotelefonia brasileira. Roquette Pinto, um médico que pesquisava a radioeletricidade para fins fisiológicos, acompanhava tudo e, entusiasmado com as transmissões, convenceu a Academia Brasileira de Ciências a patrocinar a criação da Rádio Sociedade do Rio de Janeiro, que viria a ser a PRA-2.</p>
+        <p class="card-text">O rádio nasceu no Brasil, oficialmente,
+           em 7 de setembro de 1922, nas comemorações do centenário
+           da Independência do país, com a transmissão, à distancia
+           e sem fios, da fala  do presidente Epitácio Pessoa na inauguração
+           da radiotelefonia brasileira. Roquette Pinto, um médico que pesquisava
+           a radioeletricidade para fins fisiológicos, acompanhava tudo e, entusiasmado
+           com as transmissões, convenceu a Academia Brasileira de Ciências a patrocinar
+           a criação da Rádio Sociedade do Rio de Janeiro, que viria a ser a PRA-2.</p>
       </div>
       <div class="card-footer">
         <small class="text-muted">Radio no Brasil</small>
