--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,20 +1,31 @@
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Kronos</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/agendador/inicio">Pagina Inicial <span class="sr-only">(current)</span></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Blog do Node</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Pagina Inicial<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="\categorias">Categorias</a>
+      </li>
+      {{#if user}}
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/agendador">Agendador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/agendador/player">Agendador</a>
+            <a class="nav-link" href="/usuarios/logout">Sair</a>
+        </li>
+      {{else}}
+         <li class="nav-item">
+            <a class="nav-link" href="/usuarios/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/agendador/sobre">Sobre</a>
+            <a class="nav-link" href="/usuarios/registro">Registro</a>
         </li>
-      </ul>
-    </div>
-    <h4 id="demo"></h4>
-  </nav>
+{{/if}}
+
+</nav>
